--- a/src/app/panel/pages/referidos/referidos.component.html
+++ b/src/app/panel/pages/referidos/referidos.component.html
@@ -2,8 +2,8 @@
     <h1 class="page-title my-auto">Crypto</h1>
     <div>
         <ol class="breadcrumb mb-0">
-            <li class="breadcrumb-item"> <a href="javascript:void(0)"><i class="fe fe-home"></i></a></li>
-            <li class="breadcrumb-item"> <a href="javascript:void(0)">Dashboard</a></li>
+            <li class="breadcrumb-item"> <a href="/"><i class="fe fe-home"></i></a></li>
+            <li class="breadcrumb-item"> <a href="/">Dashboard</a></li>
             <li class="breadcrumb-item active" aria-current="page">Referidos</li>
         </ol>
     </div>
