--- a/src/app/shared/layout-components/header/header.component.html
+++ b/src/app/shared/layout-components/header/header.component.html
@@ -97,7 +97,7 @@
 
               <!-- CART -->
               <!-- FULL-SCREEN -->
-              <div ngbDropdown class="dropdown d-flex notifications">
+              <!-- <div ngbDropdown class="dropdown d-flex notifications">
                 <a class="nav-link icon" data-bs-toggle="dropdown" ngbDropdownToggle>
                   <i class="bi-bank"></i><span class="pulse"></span>
                 </a>
@@ -125,7 +125,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <!-- NOTIFICATIONS -->
               <!-- <div ngbDropdown class="dropdown d-flex message">
                 <a ngbDropdownToggle class="nav-link icon text-center" data-bs-toggle="dropdown">
@@ -232,7 +232,7 @@
                 </div>
               </div> -->
               <!-- MESSAGE-BOX -->
-              <div class="dropdown d-flex header-settings" >
+              <!-- <div class="dropdown d-flex header-settings" >
                 <a (click)="toggleSidebarNotification()"
                   href="javascript:void(0);"
                   class="nav-link icon"
@@ -240,8 +240,8 @@
                   data-target=".sidebar-right"
                 >
                   <i class="fe fe-align-right"></i>
-                </a>
-              </div>
+                </a> -->
+              <!-- </div> -->
               <!-- SIDE-MENU -->
               <div ngbDropdown class="dropdown d-flex profile-1">
                 <a ngbDropdownToggle
@@ -257,18 +257,18 @@
                 </a>
                 <div ngbDropdownMenu class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
                   <div class="drop-heading">
-                    <div ngbDropdownItem class="text-center">
-                      <h5 class="text-dark mb-0 fs-14 fw-semibold">
-                        Percy Kewshun
+                    <div ngbDropdownItem class="text-center" *ngIf="profile">
+                      <h5 class="text-dark mb-0 fs-14 fw-semibold text-capitalize">
+                        {{profile.nombre}} {{profile.apellido}}
                       </h5>
                       <small class="text-muted">Senior Admin</small>
                     </div>
                   </div>
                   <div class="dropdown-divider m-0"></div>
-                  <a ngbDropdownItem class="dropdown-item"  routerLink="/pages/profile">
+                  <a ngbDropdownItem class="dropdown-item"  routerLink="/panel/perfil">
                     <i class="dropdown-icon fe fe-user"></i> Profile
                   </a>
-                  <a ngbDropdownItem class="dropdown-item"  routerLink="/pages/mail-indox">
+                  <!-- <a ngbDropdownItem class="dropdown-item"  routerLink="/pages/mail-indox">
                     <i class="dropdown-icon fe fe-mail"></i> Inbox
                     <span class="badge bg-danger rounded-pill float-end"
                       >5</span
@@ -276,7 +276,7 @@
                   </a>
                   <a ngbDropdownItem class="dropdown-item"  routerLink="/custompages/lockscreen">
                     <i class="dropdown-icon fe fe-lock"></i> Lockscreen
-                  </a>
+                  </a> -->
                   <a ngbDropdownItem (click)="signout()" class="dropdown-item">
                     <i class="dropdown-icon fe fe-alert-circle"></i> Sign out
                   </a>
@@ -285,9 +285,9 @@
             </div>
           </div>
         </div>
-        <div class="demo-icon nav-link icon" (click)="toggleSwitcher()">
+        <!-- <div class="demo-icon nav-link icon" (click)="toggleSwitcher()">
           <i class="fe fe-settings fa-spin text_primary"></i>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
