--- a/src/app/authentication/pages/register-link/register-link.component.html
+++ b/src/app/authentication/pages/register-link/register-link.component.html
@@ -129,7 +129,7 @@
                         </label> -->
                         <div class="container-login100-form-btn">
                             <button type="submit" class="btn btn-block btn-outline-primary" [disabled]="!formRegister.valid">
-                                Registrarme
+                                Registro de afiliado
                             </button>
                         </div>
                     </form>
