--- a/src/app/panel/pages/perfil/perfil.component.html
+++ b/src/app/panel/pages/perfil/perfil.component.html
@@ -19,9 +19,9 @@
                             <div class="panel profile-cover">
                                 <div class="profile-cover__action bg-img"></div>
                                 <div class="profile-cover__img">
-                                    <div class="profile-img-1">
-                                        <img src="./assets/images/users/21.jpg" alt="img" />
-                                    </div>
+                                    <a href="javascript:void(0)" class="profile-img-1" (click)="openModalIMG()">
+                                        <img src="{{profile.data.img_perfil}}" alt="img"/>
+                                    </a>
                                     <div class="profile-img-content text-dark text-start">
                                         <div class="text-dark">
                                             <h3 class="h3 mb-2 text-capitalize">{{profile.nombre}} {{profile.apellido}}</h3>
@@ -98,6 +98,31 @@
         <button class="col-sm-12 col-md-12 col-lg-12 my-2 btn btn-primary" [disabled]="!formPass.valid" (click)="update()">
             <i class="fa fa-save"></i> Guardar</button>
     </form>
+</ng-template>
+<!-- Modal referidos -->
+<ng-template #modal_img let-modal>
+    <div class="modal-body row">
+        <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+            <h5>Cambiar Imagen Perfil</h5>
+            <hr>
+        </div>
+        <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+            <div class="custom-dropzone" ngx-dropzone [accept]="'image/*'" (change)="onSelect($event)">
+                <ngx-dropzone-label>
+                    Selecciona Nueva Imagen
+                </ngx-dropzone-label>
+                <ngx-dropzone-image-preview ngProjectAs="ngx-dropzone-preview" *ngFor="let f of files" [file]="f"
+                    [removable]="true" (removed)="onRemove(f)">
+                    <ngx-dropzone-label>{{ f.name }} ({{ f.type }})</ngx-dropzone-label>
+                </ngx-dropzone-image-preview>
+            </div>
+        </div>
+        <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+            <hr>
+            <button class="btn btn-danger" (click)="closeModalIMG()"> Cerrar</button>
+            <button class="btn btn-primary mx-2" (click)="subirIMG()"> Actualizar</button>
+        </div>
+    </div>
 </ng-template>
 <!-- SPINNER -->
 <ngx-spinner type="timer"></ngx-spinner>
