--- a/src/app/shared/layout-components/header/header.component.html
+++ b/src/app/shared/layout-components/header/header.component.html
@@ -243,30 +243,30 @@
                 </a> -->
               <!-- </div> -->
               <!-- SIDE-MENU -->
-              <div ngbDropdown class="dropdown d-flex profile-1">
+              <div ngbDropdown class="dropdown d-flex profile-1" *ngIf="profile">
                 <a ngbDropdownToggle
                   href="javascript:void(0)"
                   data-bs-toggle="dropdown"
                   class="nav-link leading-none d-flex"
                 >
                   <img
-                    src="./assets/images/users/21.jpg"
+                    src="{{profile.data.img_perfil}}"
                     alt="profile-user"
                     class="avatar profile-user brround cover-image"
                   />
                 </a>
                 <div ngbDropdownMenu class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
                   <div class="drop-heading">
-                    <div ngbDropdownItem class="text-center" *ngIf="profile">
+                    <div ngbDropdownItem class="text-center">
                       <h5 class="text-dark mb-0 fs-14 fw-semibold text-capitalize">
                         {{profile.nombre}} {{profile.apellido}}
                       </h5>
-                      <small class="text-muted">Senior Admin</small>
+                      <small class="text-muted"> {{profile.email}}</small>
                     </div>
                   </div>
                   <div class="dropdown-divider m-0"></div>
                   <a ngbDropdownItem class="dropdown-item"  routerLink="/panel/perfil">
-                    <i class="dropdown-icon fe fe-user"></i> Profile
+                    <i class="dropdown-icon fe fe-user"></i> Perfil
                   </a>
                   <!-- <a ngbDropdownItem class="dropdown-item"  routerLink="/pages/mail-indox">
                     <i class="dropdown-icon fe fe-mail"></i> Inbox
@@ -278,7 +278,7 @@
                     <i class="dropdown-icon fe fe-lock"></i> Lockscreen
                   </a> -->
                   <a ngbDropdownItem (click)="signout()" class="dropdown-item">
-                    <i class="dropdown-icon fe fe-alert-circle"></i> Sign out
+                    <i class="dropdown-icon fe fe-alert-circle"></i> Salir
                   </a>
                 </div>
               </div>
