--- a/src/app/panel/pages/referidos/referidos.component.html
+++ b/src/app/panel/pages/referidos/referidos.component.html
@@ -219,7 +219,7 @@
         </div>
     </div>
 </ng-template>
-<!-- Modal referidos -->
+<!-- Modal finalizar -->
 <ng-template #modal_binance let-modal>
     <div class="modal-body row">
         <div class="col-lg-12 col-md-12 col-sm-12 text-center">
