--- a/src/app/panel/pages/perfil/perfil.component.html
+++ b/src/app/panel/pages/perfil/perfil.component.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 </div>
-<!-- MODAL AGREGAR -->
+<!-- Modal Restablecer -->
 <ng-template #add let-modal>
     <div class="modal-header">
         <h5 class="modal-title"><b>Restablecer Contraseña</b></h5>
@@ -99,7 +99,7 @@
             <i class="fa fa-save"></i> Guardar</button>
     </form>
 </ng-template>
-<!-- Modal referidos -->
+<!-- Modal IMG -->
 <ng-template #modal_img let-modal>
     <div class="modal-body row">
         <div class="col-lg-12 col-md-12 col-sm-12 text-center">
