--- a/src/app/authentication/pages/register/register.component.html
+++ b/src/app/authentication/pages/register/register.component.html
@@ -12,10 +12,10 @@
             </div>
             <div class="container-login100">
                 <div class="wrap-login100 p-6" style="width: 25%;">
-                    <form [formGroup]="formRegister" (ngSubmit)="register()" class="validate-form">
+                    <form [formGroup]="formRegister" class="validate-form">
                         <span class="login100-form-title">Registrarse</span>
                         <div class="row">
-                            <div class="col-lg-12 col-md-12 col-sm-12">
+                            <div class="col-lg-5 col-md-5 col-sm-12">
                                 <div class="form-group">
                                     <ng-select formControlName="pais"
                                             [items]="pais"
@@ -26,11 +26,22 @@
                                     </ng-select>
                                 </div>
                             </div>
+                            <div class="col-lg-7 col-md-7 col-sm-12">
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
+                                            <i class="fa fa-id-card" aria-hidden="true"></i>
+                                        </a>
+                                        <input autocomplete="off" class="form-control" type="text" formControlName="numDoc" 
+                                            placeholder="N° Documento" required>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="col-lg-12 col-md-12 col-sm-12">
                                 <div class="form-group">
                                     <div class="input-group">
                                         <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
-                                            <i class="zmdi zmdi-email" aria-hidden="true"></i>
+                                            <i class="fa fa-user" aria-hidden="true"></i>
                                         </a>
                                         <input autocomplete="off" class="form-control" type="text" formControlName="nombres" 
                                             placeholder="NOMBRES" required>
@@ -41,7 +52,7 @@
                                 <div class="form-group">
                                     <div class="input-group">
                                         <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
-                                            <i class="zmdi zmdi-email" aria-hidden="true"></i>
+                                            <i class="fa fa-user" aria-hidden="true"></i>
                                         </a>
                                         <input autocomplete="off" class="form-control" type="text" formControlName="apellidos" 
                                             placeholder="APELLIDOS" required>
@@ -63,7 +74,7 @@
                                 <div class="form-group">
                                     <div class="input-group">
                                         <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
-                                            <i class="zmdi zmdi-email" aria-hidden="true"></i>
+                                            <i class="fa fa-phone" aria-hidden="true"></i>
                                         </a>
                                         <input autocomplete="off" class="form-control" placeholder="CELULAR"
                                            formControlName="celular" maxlength="9" onkeyup="if (/\D/g.test(this.value)) this.value = this.value.replace(/\D/g,'')" >
@@ -93,44 +104,34 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <p *ngIf="errorMessage.length > 0" class="text-danger">
-                                {{errorMessage}}</p>
-                            <p *ngIf="error.message.length > 0" class="text-danger">
-                                {{error.message}} </p>
-                            <p *ngIf="message.length > 0" class="text-info">
-                                {{message}} </p>
+                            <div class="col-lg-12 col-md-12 col-sm-12 row">
+                                <hr> 
+                                <div class="col-lg-6 col-md-6 col-sm-12" *ngFor="let pack of packs">
+                                    <div class="card text-center text-uppercase justify-content-center" 
+                                        [style.border]=" '1px solid black !important'" [style.background]="pack.data.color">
+                                        <div style="margin: 1% 1% 1% 1%;">
+                                            <small>{{pack.name}}</small>
+                                            <br>
+                                            <small>{{pack.descriptions}} --> S/ {{pack.total_price}}</small>
+                                            <br>
+                                            <button (click)="openModal()" class="btn btn-outline-primary btn-sm my-2">Seleccionar</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <label class="custom-control custom-checkbox mt-4">
                             <input type="checkbox" class="custom-control-input">
                             <span class="custom-control-label">Aceptar los <a routerLink="/pages/extension/faqs">términos y condiciones</a></span>
                         </label>
                         <div class="container-login100-form-btn">
-                            <button type="submit" class="login100-form-btn btn-primary">
-                                Register
+                            <button (click)="register()" class="btn btn-block btn-outline-primary" [disabled]="!formRegister.valid">
+                                Registrarme
                             </button>
                         </div>
                         <div class="text-center pt-3">
                             <p class="text-dark mb-0">Ya tienes una cuenta?<a routerLink="/auth/login" class="text-primary ms-1">Ingresar</a></p>
                         </div>
-                        <!-- <div class="d-flex justify-content-center">
-                            <a href="javascript:void(0)">
-                                <div class="social-login me-4 text-center">
-                                    <i class="fa fa-google"></i>
-                                </div>
-                            </a>
-                            <a href="javascript:void(0)">
-                                <div class="social-login me-4 text-center">
-                                    <i class="fa fa-facebook"></i>
-                                </div>
-                            </a>
-                            <a href="javascript:void(0)">
-                                <div class="social-login text-center">
-                                    <i class="fa fa-twitter"></i>
-                                </div>
-                            </a>
-                        </div> -->
                     </form>
                 </div>
             </div>
@@ -139,5 +140,63 @@
     </div>
     <!-- END PAGE -->
 </div>
+<!-- Modal Validar -->
+<ng-template #add let-modal>
+    <div class="modal-header">
+        <h5 class="modal-title"><b>Validar Pack</b></h5>
+        <button type="button" class="close" aria-label="Close" (click)="closeModal()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <form [formGroup]="formPass" class="modal-body row">
+        <div class="col-sm-12 col-md-12 col-lg-12 mb-2">
+            <small>Banco</small>
+            <div class="form-group">
+                <ng-select formControlName="banco"
+                        [items]="banco"
+                        bindLabel="name"
+                        bindValue="id"
+                        placeholder="SELECCIONAR BANCO*">
+                </ng-select>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-12 mb-2">
+            <small>N° Operación</small>
+            <div class="form-group">
+                <div class="input-group">
+                    <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
+                        <i class="fa fa-reorder" aria-hidden="true"></i>
+                    </a>
+                    <input autocomplete="off" class="form-control" type="text" formControlName="operacion" placeholder="" required>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-12 mb-2">
+            <small>Fecha</small>
+            <div class="form-group">
+                <div class="input-group">
+                    <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
+                        <i class="fa fa-calendar" aria-hidden="true"></i>
+                    </a>
+                    <input autocomplete="off" class="form-control" type="date" formControlName="fecha" required>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-12 mb-2">
+            <small>Imagen Comprobante Pago</small> 
+            <div class="custom-dropzone" ngx-dropzone [accept]="'image/*'" (change)="onSelect($event)">
+                <ngx-dropzone-label>
+                    Selecciona Nueva Imagen
+                </ngx-dropzone-label>
+                <ngx-dropzone-image-preview ngProjectAs="ngx-dropzone-preview" *ngFor="let f of files" [file]="f"
+                    [removable]="true" (removed)="onRemove(f)">
+                    <ngx-dropzone-label>{{ f.name }} ({{ f.type }})</ngx-dropzone-label>
+                </ngx-dropzone-image-preview>
+            </div>
+        </div>
+        <button class="col-sm-12 col-md-12 col-lg-12 my-2 btn btn-primary" [disabled]="!formPass.valid" (click)="update()">
+            <i class="fa fa-save"></i> Guardar</button>
+    </form>
+</ng-template>
 <!-- BACKGROUND-IMAGE CLOSED -->
 <ngx-spinner type="timer"></ngx-spinner>
