--- a/src/app/panel/pages/referidos/referidos.component.html
+++ b/src/app/panel/pages/referidos/referidos.component.html
@@ -86,12 +86,45 @@
     <div class="col-lg-6 col-md-6 col-sm-12">
         <div class="card">
             <div class="row g-0">
-                <div class="col-md-4" style="border-top-left-radius: 10px; border-bottom-left-radius: 10px; background-color: #4393FC;">
-                </div>
-                <div class="col-md-8" style="border-radius: 10px;">
+                <!-- <div class="col-md-4" style="border-top-left-radius: 10px; border-bottom-left-radius: 10px; background-color: #4393FC;">
+                </div> -->
+                <div class="col-md-12" style="border-radius: 10px;">
                     <div class="card-body">
                         <h2>Añade un amigo</h2>
-                        <form [formGroup]="formRegister" (ngSubmit)="sendData()" class="row">
+                        <form [formGroup]="formRegister" class="row">
+                            <div class="col-lg-5 col-md-5 col-sm-12">
+                                <div class="form-group">
+                                    <ng-select formControlName="pais"
+                                            [items]="pais"
+                                            bindLabel="name"
+                                            bindValue="id"
+                                            placeholder="SELECCIONAR PAIS*"
+                                            (change)="selectPais($event)">
+                                    </ng-select>
+                                </div>
+                            </div>
+                            <div class="col-lg-2 col-md-2 col-sm-12">
+                                <div class="form-group">
+                                    <ng-select formControlName="prefijo"
+                                            [items]="prefijo"
+                                            bindLabel="name"
+                                            bindValue="id"
+                                            placeholder="PREFIJO*"
+                                            (change)="selectPais($event)">
+                                    </ng-select>
+                                </div>
+                            </div>
+                            <div class="col-lg-5 col-md-5 col-sm-12">
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
+                                            <i class="fa fa-id-card" aria-hidden="true"></i>
+                                        </a>
+                                        <input autocomplete="off" class="form-control" type="text" formControlName="numDoc" 
+                                            placeholder="N° Documento" required>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="form-group">
                                     <div class="input-group">
@@ -114,7 +147,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-12 col-md-12 col-sm-12">
+                            <div class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="form-group">
                                     <div class="input-group">
                                         <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
@@ -123,28 +156,6 @@
                                         <input autocomplete="off" class="form-control" type="email" formControlName="email"
                                             placeholder="CORREO ELECTRÓNICO" required>
                                     </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-8 col-md-8 col-sm-12">
-                                <div class="form-group">
-                                    <ng-select formControlName="pais"
-                                            [items]="pais"
-                                            bindLabel="name"
-                                            bindValue="id"
-                                            placeholder="SELECCIONAR PAIS*"
-                                            (change)="selectPais($event)">
-                                    </ng-select>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-md-4 col-sm-12">
-                                <div class="form-group">
-                                    <ng-select formControlName="prefijo"
-                                            [items]="prefijo"
-                                            bindLabel="name"
-                                            bindValue="id"
-                                            placeholder="PREFIJO*"
-                                            (change)="selectPais($event)">
-                                    </ng-select>
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-12">
@@ -158,16 +169,30 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
-                                            <i class="zmdi zmdi-money" aria-hidden="true"></i>
-                                        </a>
-                                        <input autocomplete="off" class="form-control" placeholder="MONTO" (keyup)="getPack($event)"
-                                           formControlName="monto" maxlength="4" onkeyup="if (/\D/g.test(this.value)) this.value = this.value.replace(/\D/g,'')" >
+                            <div class="col-lg-12 col-md-12 col-sm-12 row">
+                                <hr>
+                                <div class="col-lg-6 col-md-6 col-sm-12" *ngFor="let pack of packs">
+                                    <div class="card text-center text-uppercase justify-content-center" 
+                                        [style.border]=" '1px solid black !important'" [style.background]="pack.data.color">
+                                        <div style="margin: 1% 1% 1% 1%;">
+                                            <small>{{pack.name}}</small>
+                                            <br>
+                                            <small>{{pack.descriptions}} --> S/ {{pack.total_price}}</small>
+                                            <br>
+                                            <button (click)="openModalValidate()" class="btn btn-outline-primary btn-sm my-2">Seleccionar</button>
+                                        </div>
                                     </div>
-                                </div>
+                                </div>                                
+                                <!-- <div class="card col-lg-4 col-md-4 col-sm-12 text-center text-uppercase justify-content-center"
+                                    style="border: 1px solid black !important;background:radial-gradient(circle, rgba(131,217,212,0.8631827731092436) 0%, rgba(55,134,73,0.6474964985994398) 100%)">
+                                    <div style="margin: 1% 1% 1% 1%;">
+                                        <small>Pack Empresarial <br> Promoción</small>
+                                        <br>
+                                        <small>6 Pts S/ 500</small>
+                                        <br>
+                                        <button (click)="openModalValidate()" class="btn btn-outline-primary btn-sm my-2">Seleccionar</button>
+                                    </div>
+                                </div> -->
                             </div>
                             <div  class="col-sm-12 col-md-12 col-lg-12 text-center my-3 text-white" *ngIf="validate_pack">
                                 <ngb-alert type="success" [dismissible]="false">
@@ -184,8 +209,8 @@
                                 </label>
                             </div> -->
                             <div class="col-lg-12 col-md-12 col-sm-12">
-                                <button type="submit" class="btn btn-block btn-outline-primary" style="font-size:15px" [disabled]="!formRegister.valid">
-                                  Procesar Pago
+                                <button (click)="sendData()" class="btn btn-block btn-outline-primary" style="font-size:15px" [disabled]="!formRegister.valid">
+                                  Registrar
                                 </button>
                             </div>
                         </form>
@@ -199,6 +224,64 @@
     </div>
     <div class="col-lg-3 col-md-3 col-sm-12"></div>
 </div>
+<!-- Modal Validar -->
+<ng-template #add let-modal>
+    <div class="modal-header">
+        <h5 class="modal-title"><b>Validar Pack</b></h5>
+        <button type="button" class="close" aria-label="Close" (click)="closeModalValidate()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <form [formGroup]="formPass" class="modal-body row">
+        <div class="col-sm-12 col-md-12 col-lg-12 mb-2">
+            <small>Banco</small>
+            <div class="form-group">
+                <ng-select formControlName="banco"
+                        [items]="banco"
+                        bindLabel="name"
+                        bindValue="id"
+                        placeholder="SELECCIONAR BANCO*">
+                </ng-select>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-12 mb-2">
+            <small>N° Operación</small>
+            <div class="form-group">
+                <div class="input-group">
+                    <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
+                        <i class="fa fa-reorder" aria-hidden="true"></i>
+                    </a>
+                    <input autocomplete="off" class="form-control" type="text" formControlName="operacion" placeholder="" required>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-12 mb-2">
+            <small>Fecha</small>
+            <div class="form-group">
+                <div class="input-group">
+                    <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
+                        <i class="fa fa-calendar" aria-hidden="true"></i>
+                    </a>
+                    <input autocomplete="off" class="form-control" type="date" formControlName="fecha" required>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-12 mb-2">
+            <small>Imagen Comprobante Pago</small> 
+            <div class="custom-dropzone" ngx-dropzone [accept]="'image/*'" (change)="onSelect($event)">
+                <ngx-dropzone-label>
+                    Selecciona Nueva Imagen
+                </ngx-dropzone-label>
+                <ngx-dropzone-image-preview ngProjectAs="ngx-dropzone-preview" *ngFor="let f of files" [file]="f"
+                    [removable]="true" (removed)="onRemove(f)">
+                    <ngx-dropzone-label>{{ f.name }} ({{ f.type }})</ngx-dropzone-label>
+                </ngx-dropzone-image-preview>
+            </div>
+        </div>
+        <button class="col-sm-12 col-md-12 col-lg-12 my-2 btn btn-primary" [disabled]="!formPass.valid" (click)="update()">
+            <i class="fa fa-save"></i> Guardar</button>
+    </form>
+</ng-template>
 <!-- Modal referidos -->
 <ng-template #modal_pago let-modal>
     <div class="modal-body row">
