--- a/src/app/panel/pages/dashboard/dashboard.component.html
+++ b/src/app/panel/pages/dashboard/dashboard.component.html
@@ -7,3 +7,22 @@
         </ol> 
     </div>
 </div>
+<div class="row my-5">
+    <div class="col-sm-12 col-md-4 col-lg-4"></div>
+    <div class="col-sm-12 col-md-4 col-lg-4">
+    <div class="card">
+        <div class="card-body text-center">
+        <div>
+            <h2>Bienvenido a tu Panel</h2>
+            <h6>Vamos por nuestros objetivos</h6>
+        </div>
+        <div class="my-2">
+            <img src="https://media.discordapp.net/attachments/1020406785640779888/1050307899328581672/2.png" alt="">
+        </div>
+        </div>
+    </div>
+    </div>
+    <div class="col-sm-12 col-md-4 col-lg-4"></div>
+</div>
+<!-- SPINNER -->
+<ngx-spinner type="timer"></ngx-spinner>
